# ng1ok-detect

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/ng1ok/detect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  detect-crc32.cpp  detect-crc32.h  elf-parser.c  elf-parser.h  mySyscall.h  native-lib.cpp  syscall32.s  syscall64.s
app/src/main/java/ng1ok/detect/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/ng1ok/detect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ng1okTemp/: ng1ok_detect_maps
ng1okTemp/frida_hook/: dump_so.js  hook_openat.js
